// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RichTextArea should have a help block 1`] = `
<div
  className="ctrl-input"
>
  <label
    htmlFor="select-checkbox"
  >
    Label Name
    
     
    <span
      className="help-block"
    >
      <span
        aria-hidden="true"
        className="glyphicon glyphicon-question-sign"
      />
       
      Help
       
    </span>
  </label>
  <div>
    <textarea
      id="select-checkbox"
      name="checkbox"
      onBlur={[Function]}
      onChange={[Function]}
      onDragStart={[Function]}
      onDrop={[Function]}
      onFocus={[Function]}
      value=""
    />
  </div>
</div>
`;

exports[`RichTextArea should have this default template 1`] = `
<div
  className="ctrl-input"
>
  <label
    htmlFor="select-checkbox"
  >
    Label Name
    
     
    
  </label>
  <div>
    <textarea
      id="select-checkbox"
      name="checkbox"
      onBlur={[Function]}
      onChange={[Function]}
      onDragStart={[Function]}
      onDrop={[Function]}
      onFocus={[Function]}
      value=""
    />
  </div>
</div>
`;
